--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -1,6 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
 $padding-left: 20px;
 $padding-right: 20px;
 $font-l: 24px;
 $font-m: 20px;
-$font-family-base: "Open Sans";
+$font-family: "Open Sans", sans-serif;
 $line-height: 1.6;
