--- a/css/all.css
+++ b/css/all.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap");
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -72,7 +73,7 @@ table {
 
 .timeline {
   position: relative;
-  padding-left: 2rem;
+  padding-left: 32px;
 }
 
 .timeline::before {
@@ -92,7 +93,7 @@ table {
 .timeline-item::before {
   content: "";
   position: absolute;
-  left: -1.8125rem;
+  left: -29px;
   top: 10px;
   width: 8px;
   height: 8px;
@@ -106,7 +107,7 @@ table {
   width: 100%;
   height: 2px;
   background-color: #ccc;
-  margin-bottom: 1em;
+  margin-bottom: 16px;
 }
 
 .autobiography h2::after {
@@ -115,7 +116,7 @@ table {
   width: 100%;
   height: 2px;
   background-color: #ccc;
-  margin-top: 1em;
+  margin-top: 16px;
 }
 
 *, *::before, *::after {
@@ -124,7 +125,7 @@ table {
 
 main {
   width: 80%;
-  font-family: "Open Sans";
+  font-family: "Open Sans", sans-serif;
   max-width: 1200px;
   margin: 0 auto;
 }
@@ -152,8 +153,8 @@ a:hover {
 
 p {
   line-height: 1.6;
-  margin-top: 0.5em;
-  margin-bottom: 0.5em;
+  margin-top: 8px;
+  margin-bottom: 8px;
 }
 
 ul {
@@ -227,8 +228,8 @@ ul {
 
 .content {
   font-size: 16px;
-  margin-top: 0.5em;
-  margin-bottom: 0.5em;
+  margin-top: 8px;
+  margin-bottom: 8px;
   padding-left: 20px;
   padding-right: 20px;
 }
@@ -243,18 +244,20 @@ ul {
   }
 }
 
+.skills-group {
+  gap: 20px;
+}
+
 .timeline, .experience-group {
   flex: 1;
 }
 
-.skills-content {
+.skills-row {
   width: 33%;
   font-size: 16px;
-  padding-left: 20px;
-  padding-right: 20px;
 }
 @media (max-width: 768px) {
-  .skills-content {
+  .skills-row {
     width: 100%;
   }
 }
